test_suite/tests/macros/ui/provide_struct_no_inject.stderr
error[E0277]: the trait bound `MyStruct: Default` is not satisfied
 --> tests/macros/ui/provide_struct_no_inject.rs:3:1
  |
3 | #[provide]
  | ^^^^^^^^^^ the trait `Default` is not implemented for `MyStruct`
  |
  = note: required for `MyStruct` to implement `Inject`
  = note: this error originates in the attribute macro `provide` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `MyStruct` with `#[derive(Default)]`
  |
4 | #[derive(Default)]
  |
